<resources>
    <string name="app_name">Library</string>
    <string name="common_loading_message">正在加载中...</string>
    <string name="common_empty_msg">抱歉,暂未获取到数据!</string>
    <string name="common_error_msg">抱歉,系统出错了!\n请点击屏幕重试~</string>
    <string name="common_no_network_msg">网络连接失败，点击重新加载~</string>
    <string name="common_refresh_msg">刷新网络</string>
    <string name="common_load_more_end">亲！没有更多了</string>
    <string name="server_error">暂时无法响应，请稍后再试~</string>
    <string name="string_re_try">重新获取</string>
    <!--首页 -->
    <string name="company_name">XXXX服务有限公司</string>
    <string name="company_phone">400-0000-0000</string>

    <string name="hint_input_phone">请输入账号</string>
    <string name="string_get_verify_code">获取验证码</string>

    <!-- 老人详情 -->
     <string name="basic_info_title">基本信息</string>
     <string name="latest_info_already_show">已为您展示最新数据</string>
     <string name="data_detail_title">体检数据</string>
     <string name="sleep_report_title">睡眠报告</string>
     <string name="sleep_report_data">睡眠数据</string>
     <string name="basic_info_height">身高</string>
     <string name="basic_info_weight">体重</string>
     <string name="basic_info_food_prefer">饮食偏好</string>
     <string name="basic_info_life_style">生活习惯</string>
     <string name="basic_info_personality_character">性格特点</string>
     <string name="basic_info_common_disease">常见疾病</string>
     <string name="title_common_record">日常记录</string>
     <string name="latest_common_record">最新记录</string>
     <string name="full_record">全部记录</string>
     <string name="blood_pressure">血压</string>
    <string name="blood_lipid">血脂</string>
     <string name="blood_sugar">血糖</string>
     <string name="blood_spo2">血氧</string>
     <string name="electrocardiogram">心电图</string>
     <string name="body_temperature">体温</string>
     <string name="heart_rate">心率</string>
     <string name="breathe">呼吸</string>
     <string name="blood_routine">血常规</string>
     <string name="urine_routine">尿常规</string>
     <string name="hemoglobin">血红蛋白</string>
     <string name="three_classification">三分类</string>
     <string name="biochemistry">生化</string>
     <string name="glycated_hemoglobin">糖化血红蛋白</string>
     <string name="deep_sleep">深睡</string>
     <string name="light_sleep">浅睡</string>
     <string name="be_awake">清醒</string>
     <string name="yesterday">昨天</string>
     <string name="the_day_before_yesterday">前天</string>
     <string name="present_data_none">暂无数据</string>
</resources>
