<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_data_detail">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50px"
        android:layout_marginTop="40px"
        android:text="@string/data_detail_title"
        android:textSize="15sp"
        android:textColor="@color/color_373737"/>

    <RadioGroup
        android:id="@+id/body_examination_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50px"
        android:layout_marginTop="39px"
        android:layout_marginRight="67px"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/blood_pressure"
            android:layout_width="75px"
            android:layout_height="40px"
            android:text="@string/blood_pressure"
            android:textSize="9sp"
            android:gravity="center"
            android:button="@null"
            android:checked="true"
            android:background="@drawable/bg_body_examination_report"
            android:textColor="@color/text_body_examination_report"/>
        <RadioButton
            android:id="@+id/blood_lipid"
            android:layout_width="75px"
            android:layout_height="40px"
            android:text="@string/blood_lipid"
            android:textSize="9sp"
            android:gravity="center"
            android:button="@null"
            android:background="@drawable/bg_body_examination_report"
            android:textColor="@color/text_body_examination_report"/>
        <RadioButton
            android:id="@+id/blood_sugar"
            android:layout_width="75px"
            android:layout_height="40px"
            android:text="@string/blood_sugar"
            android:textSize="9sp"
            android:gravity="center"
            android:button="@null"
            android:background="@drawable/bg_body_examination_report"
            android:textColor="@color/text_body_examination_report"/>
        <RadioButton
            android:id="@+id/electrocardiogram"
            android:layout_width="75px"
            android:layout_height="40px"
            android:text="@string/electrocardiogram"
            android:textSize="9sp"
            android:gravity="center"
            android:button="@null"
            android:background="@drawable/bg_body_examination_report"
            android:textColor="@color/text_body_examination_report"/>
        <RadioButton
            android:id="@+id/body_temperature"
            android:layout_width="75px"
            android:layout_height="40px"
            android:text="@string/body_temperature"
            android:textSize="9sp"
            android:gravity="center"
            android:button="@null"
            android:background="@drawable/bg_body_examination_report"
            android:textColor="@color/text_body_examination_report"/>
        <RadioButton
            android:id="@+id/blood_routine"
            android:layout_width="75px"
            android:layout_height="40px"
            android:text="@string/blood_routine"
            android:textSize="9sp"
            android:gravity="center"
            android:button="@null"
            android:background="@drawable/bg_body_examination_report"
            android:textColor="@color/text_body_examination_report"/>
        <RadioButton
            android:id="@+id/urine_routine"
            android:layout_width="75px"
            android:layout_height="40px"
            android:text="@string/urine_routine"
            android:textSize="9sp"
            android:gravity="center"
            android:button="@null"
            android:background="@drawable/bg_body_examination_report"
            android:textColor="@color/text_body_examination_report"/>
        <RadioButton
            android:id="@+id/hemoglobin"
            android:layout_width="82px"
            android:layout_height="40px"
            android:text="@string/hemoglobin"
            android:textSize="9sp"
            android:gravity="center"
            android:button="@null"
            android:background="@drawable/bg_body_examination_report"
            android:textColor="@color/text_body_examination_report"/>
        <RadioButton
            android:id="@+id/three_classification"
            android:layout_width="75px"
            android:layout_height="40px"
            android:text="@string/three_classification"
            android:textSize="9sp"
            android:gravity="center"
            android:button="@null"
            android:background="@drawable/bg_body_examination_report"
            android:textColor="@color/text_body_examination_report"/>
        <RadioButton
            android:id="@+id/biochemistry"
            android:layout_width="75px"
            android:layout_height="40px"
            android:text="@string/biochemistry"
            android:textSize="9sp"
            android:gravity="center"
            android:button="@null"
            android:background="@drawable/bg_body_examination_report"
            android:textColor="@color/text_body_examination_report"/>
        <RadioButton
            android:id="@+id/glycated_hemoglobin"
            android:layout_width="124px"
            android:layout_height="40px"
            android:text="@string/glycated_hemoglobin"
            android:textSize="9sp"
            android:gravity="center"
            android:button="@null"
            android:background="@drawable/bg_body_examination_report"
            android:textColor="@color/text_body_examination_report"/>
    </RadioGroup>

    <com.smart.tvpos.widgets.ShadowCurveChartView
        android:id="@+id/curveViewUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50px"
        android:layout_marginTop="84px"/>
</com.zhy.autolayout.AutoLinearLayout>