<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_basic_info"
    android:orientation="vertical">

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50px"
            android:layout_marginTop="39px"
            android:text="@string/basic_info_title"
            android:textSize="15sp"
            android:textColor="@color/color_373737"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="50px"
            android:layout_marginRight="47px"
            android:text="@string/latest_info_already_show"
            android:textSize="10sp"
            android:textColor="@color/color_sub_title_text"/>
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="88px"
        android:orientation="horizontal">

        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50px">

            <TextView
                android:id="@+id/title_icon_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11px"
                android:drawableLeft="@drawable/icon_height"
                android:drawablePadding="14px"
                android:text="@string/basic_info_height"
                android:textSize="10sp"
                android:textColor="@color/color_icon_text"/>

            <TextView
                android:id="@+id/elderly_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35px"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/title_icon_height"
                android:textColor="@color/color_373737"
                android:textSize="19sp" />
        </com.zhy.autolayout.AutoRelativeLayout>

        <View android:layout_width="2px"
            android:layout_height="160px"
            android:layout_marginLeft="54px"
            android:layout_marginRight="54px"
            android:background="@color/color_divider_line"/>
        
        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_icon_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_weight"
                android:drawablePadding="11px"
                android:textSize="10sp"
                android:text="@string/basic_info_weight"
                android:textColor="@color/color_icon_text"/>

            <TextView
                android:id="@+id/elderly_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35px"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/title_icon_weight"
                android:textColor="@color/color_373737"
                android:textSize="19sp" />
        </com.zhy.autolayout.AutoRelativeLayout>

        <View android:layout_width="2px"
            android:layout_height="160px"
            android:layout_marginLeft="55px"
            android:layout_marginRight="40px"
            android:background="@color/color_divider_line"/>

        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_icon_food_prefer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11px"
                android:drawableLeft="@drawable/icon_food_prefer"
                android:drawablePadding="14px"
                android:textSize="10sp"
                android:text="@string/basic_info_food_prefer"
                android:textColor="@color/color_icon_text"/>

            <TextView
                android:id="@+id/elderly_food_prefer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="33px"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/title_icon_food_prefer"
                android:textColor="@color/color_373737"
                android:textSize="11sp" />
        </com.zhy.autolayout.AutoRelativeLayout>

        <View android:layout_width="2px"
            android:layout_height="160px"
            android:layout_marginLeft="36px"
            android:layout_marginRight="36px"
            android:background="@color/color_divider_line"/>

        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_icon_life_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10px"
                android:drawableLeft="@drawable/icon_life_style"
                android:drawablePadding="14px"
                android:text="@string/basic_info_life_style"
                android:textSize="10sp"
                android:textColor="@color/color_icon_text"/>

            <TextView
                android:id="@+id/elderly_life_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35px"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/title_icon_life_style"
                android:textColor="@color/color_373737"
                android:textSize="11sp" />
        </com.zhy.autolayout.AutoRelativeLayout>

        <View android:layout_width="2px"
            android:layout_height="160px"
            android:layout_marginLeft="36px"
            android:layout_marginRight="36px"
            android:background="@color/color_divider_line"/>

        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_icon_personality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12px"
                android:drawableLeft="@drawable/icon_personality_character"
                android:drawablePadding="14px"
                android:text="@string/basic_info_personality_character"
                android:textSize="10sp"
                android:textColor="@color/color_icon_text"/>

            <TextView
                android:id="@+id/elderly_personality_character"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35px"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/title_icon_personality"
                android:textColor="@color/color_373737"
                android:textSize="11sp" />
        </com.zhy.autolayout.AutoRelativeLayout>

        <View android:layout_width="2px"
            android:layout_height="160px"
            android:layout_marginLeft="36px"
            android:layout_marginRight="36px"
            android:background="@color/color_divider_line"/>

        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_icon_common_disease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11px"
                android:drawableLeft="@drawable/icon_common_disease"
                android:drawablePadding="14px"
                android:text="@string/basic_info_common_disease"
                android:textSize="10sp"
                android:textColor="@color/color_icon_text"/>

            <TextView
                android:id="@+id/elderly_common_disease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35px"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/title_icon_common_disease"
                android:textColor="@color/color_373737"
                android:textSize="11sp" />
        </com.zhy.autolayout.AutoRelativeLayout>

    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoLinearLayout>